--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,4 +27,4 @@ services:
     ports:
       - '9090:9090'
     # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
-    command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "9090"]
+    command: ["serve", "--env", "development", "--hostname", "0.0.0.0", "--port", "9090"]
