--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,3 +28,12 @@ services:
       - '9090:9090'
     # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
     command: ["serve", "--env", "development", "--hostname", "0.0.0.0", "--port", "9090"]
+
+ redis:
+    image: 'redis:latest'
+    environment:
+      # ALLOW_EMPTY_PASSWORD is recommended only for development.
+      - ALLOW_EMPTY_PASSWORD=yes
+      - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL
+    ports:
+      - '6379:6379'
