--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,3 +36,13 @@ services:
       - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL
     ports:
       - '6379:6379'
+  queues:
+    image: watcher:latest
+    build:
+      context: .
+    environment:
+      <<: *shared_environment
+    ports:
+      - '9090:9090'
+    # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
+    command: ["queues", "--env", "development", "--hostname", "0.0.0.0"]
