--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,4 +45,4 @@ services:
     ports:
       - '9091:9091'
     # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
-    command: ["queues", "--env", "development", "--hostname", "0.0.0.0"]
+    command: ["queues"]
