--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,4 +38,6 @@ services:
       - '6379:6379'
   queues:
     image: watcher:latest
+    environment:
+      <<: *shared_environment
     command: ["queues"]
