--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,19 +15,19 @@
 version: '3.7'
 
 x-shared_environment: &shared_environment
-  LOG_LEVEL: ${LOG_LEVEL:-debug}
+  LOG_LEVEL: ${LOG_LEVEL:-info}
   
 services:
-#  app:
-#    image: watcher:latest
-#    build:
-#      context: .
-#    environment:
-#      <<: *shared_environment
-#    ports:
-#      - '9090:9090'
-#    # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
-#    command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "9090","--log", "info"]
+  app:
+    image: watcher:latest
+    build:
+      context: .
+    environment:
+      <<: *shared_environment
+    ports:
+      - '9090:9090'
+    # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
+    command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "9090","--log", "info"]
   redis:
     image: 'redis:latest'
     environment:
