--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
     image: watcher:latest
     environment:
       <<: *shared_environment
+    volumes:
+      - ~/:/
     command: ["queues","--log", "info"]
     depends_on:
       - redis
